# Projet-PROG5

./: .gitignore  README.md  a.out  affichage_entete.c  affichage_entete.h  affichage_relocations.c  affichage_section.c  affichage_table_symboles.c
.github/workflows/: c-cpp.yml
elf_linker-1.0/: AUTHORS  Makefile  Makefile.am  Makefile.in  Options_and_debug_example  Options_and_debug_example.c  README  a.out  aclocal.m4  aclocal.m4.txt  aff  affichage_contenu_section.c  affichage_contenu_section.h  affichage_entete.c  affichage_entete.h  affichage_section.c  affichage_section.h  affichage_table_symboles.c  affichage_table_symboles.h  affichage_tr.c  affichage_tr.h  arm.out  config.status  configure  configure.ac  contenu  debug.c  debug.h  elf32.c  elf32.h  entete  error.h  filtre.pl  fusion  fusion.c  fusion.h  fusion_reloc  fusion_relocation.c  fusion_relocation.h  fusion_section.c  (+30 more)
elf_linker-1.0/.deps/: Options_and_debug_example.Po  affichage_contenu_section.Po  affichage_entete.Po  affichage_section.Po  affichage_table_symboles.Po  affichage_tr.Po  debug.Po  elf32.Po  fusion.Po  fusion_relocation.Po  fusion_section.Po  fusion_ts.Po  gestion_contenu_section.Po  gestion_entete.Po  gestion_section.Po  gestion_table_symboles.Po  gestion_tr.Po  readelf.Po  util.Po
elf_linker-1.0/Examples_fusion/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure~  eabi-none-lib.c  file1.c  file2.c  fusion_result
elf_linker-1.0/Examples_fusion/.deps/: eabi-none-lib.Po  file1.Po  file2.Po
elf_linker-1.0/Examples_fusion/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
elf_linker-1.0/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
elf_linker-1.0/build-aux/: ylwrap
elf_linker-1.0/m4/: crossarm.m4  hostsubdir.m4
elf_linker-1.0/tests/: affichage_table_symbole.c  file1.expected  file1_affiche_tab_symb.expected  file1_afficher_contenu_section_1.expected  file1_afficher_contenu_section_2.expected  file1_afficher_contenu_section_3.expected  file1_afficher_contenu_section_4.expected  file1_afficher_contenu_section_5.expected  file1_afficher_tr.expected  file2.expected  file2_affiche_tab_symb.expected  file2_afficher_tr.expected  file2_section.expected  test_affichage_affichage_ts.c  test_affichage_contenu_section.c  test_affichage_entete.c  test_affichage_section.c  test_affichage_tr__.c  test_affichage_ts.c  test_fusion_section.c  test_fusion_section.py  test_gestion_contenu_section.c  test_gestion_entete.c  test_gestion_section.c  test_gestion_table_relocation.c  test_gestion_table_symboles.c  test_gestion_tr.c  utils.c  utils.h
elf_linker-1.0/tests/.deps/: test_affichage_contenu_section.Po  test_affichage_entete.Po  test_affichage_section.Po  test_affichage_tr.Po  test_affichage_ts.Po  test_gestion_contenu_section.Po  test_gestion_entete.Po  test_gestion_section.Po  test_gestion_tr.Po  test_gestion_ts.Po  utils.Po
elf_linker-1.0/tests/CuTest/: CuTest.c
elf_linker-1.0/tests/CuTest/.deps/: CuTest.Po
fichier section/tests/: file2_section.expected  test_affichage_section.c
